# ventilation-system-design

./: LICENSE  README.md  index.html  package.json  tailwind.config.ts  vite.config.desktop.ts  vite.config.electron.ts
backend/: func2url.json
backend/admin-licenses/: index.py  tests.json
backend/aerodynamics/: index.py  tests.json
backend/airflow/: index.py  tests.json
backend/app-version/: index.py  tests.json
backend/download-fonts/: index.py  tests.json
backend/explosion-calculator/: index.py  tests.json
backend/icon-pack/: index.py  requirements.txt  tests.json
backend/license/: index.py  tests.json
backend/make-ico/: index.py  requirements.txt  tests.json
backend/rescue-calculator/: index.py  tests.json
backend/svg-to-pdf/: index.py  requirements.txt  tests.json
backend/ventcore/: index.py  tests.json
backend/ventsolver/: index.py  tests.json
backend/water-hydraulics/: index.py  tests.json
db_migrations/: V0001__V1__create_licenses.sql  V0002__add_hw_info_to_license_seats.sql  V0003__license_monitoring_events_and_seat_fields.sql  V0004__add_core_version_to_license_seats.sql
desktop/: HOW_TO_BUILD_LINUX.md  HOW_TO_BUILD_WINDOWS.md  README.md  build.bat  build.sh  prepare.bat  prepare.sh
desktop/csharp/: BUILD.md  build.bat  compile_core.py  make_ico.py  requirements-build.txt  server_entry.py  smoke_test.py
desktop/electron/: HOW_TO_BUILD.md  afterPack.cjs  build.bat  electron-builder.yml  main.cjs  main.js  package.json  preload.cjs
desktop/pywebview/: HOW_TO_BUILD.md  build.bat  desktop_app.py  register_vproj.bat
desktop/server/: integrity.py  machine_id.py  main.py  requirements.txt
desktop/tauri/: Cargo.toml  tauri.conf.json
desktop/tauri/src/: main.rs
public/: _headers  manifest.webmanifest  sw.js
public/fonts/: fonts.css
src/: App.tsx  index.css  main.tsx
(+121 files in other folders)
