[package]
name = "pv-sistema-desktop"
version = "1.0.0"
description = "ПВ-Система — система проветривания горных выработок"
authors = ["PV-Sistema"]
edition = "2021"

[lib]
name = "pv_sistema_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
