[package]
name = "pv-sistema-desktop"
version = "1.0.0"
description = "ПВ-Система — система проветривания горных выработок"
authors = ["PV-Sistema"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri      = { version = "2", features = [] }
reqwest    = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
